# NLP-Review-Classifier

./: .gitignore  README.md  app.py  deceptive-opinion.csv  main.py  pyproject.toml  requirements.txt
baseline-legacy/src/: inference.py  model.py  preprocess.py  train.py
src/: dataset.py  inference.py  model.py  optimize.py  train.py
